final code improvement (logger missing will be added soon)
